--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+root {
+    margin: 0;
+    padding: 0;
+}
+
+.field {
+    @apply flex flex-col w-1/4 h-auto m-4
+}
+
+.field label {
+    @apply text-center text-lg
+}
+
+.field input{
+    @apply outline-none p-1
+}
